<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Login Activity -->
    <string name="api_key_hint">API Key</string>
    <string name="login_button_text">Login</string>
    <string name="getkey_button_text">Get Key</string>

    <string name="app_name">CSH Drink</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_admin">Admin Page</string>
    <string name="action_info">Statistics</string>
    <string name="title_activity_login">CSH Drink</string>
    <string name="title_activity_main">Drink</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_title"><b>CSH Drink</b></string>
    <string name="encrypt_title"><b>encrypted-userprefs</b></string>
    <string name="processbutton_title"><b>android-process-button</b></string>
    <string name="pagertab_title"><b>PagerSlidingTabStrip</b></string>
    <string name="pagertab_license">Copyright 2013 Andreas Stuetz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="processbutton_license">The MIT License (MIT)

Copyright © 2014 Danylyk Dmytro

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="encrypt_license">Copyright © 2012 Sveinung Kval Bakken, sveinung.bakken@gmail.com
Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
"Software"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:
The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="app_license">Copyright 2015 Peter Zujko

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <string name="aboutText">
        <![CDATA[<p>CSH Drink</p><p>Author: Peter Zujko (<a href="mailto:zujko@csh.rit.edu">zujko@csh.rit.edu</a>)</p><p>Source Code: <a href="https://github.com/Z-KO/CSH-Android-Drink">github.com/Z-KO/CSH-Android-Drink</a></p><br><p>CSH Drink allows you to interface with WebDrink from your Android device. This application relies on the <a href="https://github.com/bencentra/WebDrink-2.0/blob/master/docs/API.md">WebDrink API</a> to work. In order to use CSH Drink, you must use an API key. You may obtain your API key by going to <a href="https://webdrink.csh.rit.edu">WebDrink</a>, then clicking “Settings” at the top of the page.</p>]]>
    </string>

    <string-array name="themes">
        <item name="dark">Dark</item>
        <item name="light">Light</item>
    </string-array>
    <string-array name="themesValues">
        <item name="dark">dark</item>
        <item name="light">light</item>
    </string-array>
    <string name="title_activity_license">Licenses</string>

    <string name="title_activity_about">About</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_statistics">Statistics</string>

</resources>
