<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.csh.drink.activities.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cshPink"
    android:theme="@style/Light_Login"
    android:gravity="center">

    <TextView
        android:id="@+id/title_textview"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/drink_logo_textview"
        android:src="@drawable/drink_logo_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/api_key_textinput_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/api_key_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/api_key_hint"
            android:singleLine="true"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:text="@string/login_button_text"
            android:layout_height="35dp"
            android:layout_width="90dp"
            android:padding="10dp"
            android:background="@color/cshPurple"
            android:textColor="@color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/get_apikey_button"
            android:text="@string/getkey_button_text"
            android:layout_height="35dp"
            android:layout_width="90dp"
            android:padding="10dp"
            android:layout_marginLeft="8dp"
            android:background="@color/cshPurple"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
